--- a/package.json
+++ b/package.json
@@ -6,9 +6,17 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "bootstrap": "^5.1.0",
+    "classnames": "^2.3.1",
     "react": "^17.0.2",
+    "react-date-range": "^1.3.0",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.13.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-select": "^4.3.1",
+    "react-tinder-card": "^1.4.0",
+    "react-to-pdf": "^0.0.14",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
